# VectorFieldVisualizer

./: CMakeLists.txt  README.md
Code/: CMakeLists.txt  VectorFieldVisualizer.cpp  Vector_Field_Visualizer.1
Code/FieldFiles/: attractingnode.field  center.field  center2.field  const.field  nonconst.field  repellingfocus.field  saddle.field  unsteadyhelices.field
Code/Libraries/: CMakeLists.txt  Color.C  Color.h  GL3.C  GL3.h  Material.C  Material.h  Point.C  Point.h  aVector.C  aVector.h
Code/OpenGLHandling/: CMakeLists.txt  DataCanvas.cpp  DataCanvas.h  GLCanvas.cpp  GLCanvas.h
Code/VectorFieldManagement/: CMakeLists.txt  Particle.cpp  Particle.h  VectorField.cpp  VectorField.h  VectorFieldNode.cpp  VectorFieldNode.h
